Fix thread line not showing up for scenarios where there are only 2 threads

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* Mastodon Bird UI by @rolle@mementomori.social
-   1.3.8rc5 */
+   1.3.8rc6 */
 
 /* CSS variables */
 :root {
@@ -3044,7 +3044,8 @@ body.embed .entry .detailed-status {
 .layout-single-column .scrollable > div > .status__thread ~ .status__thread--first-item + .status__thread--last-item .status.status-reply .status__avatar::before,
 .layout-single-column .scrollable > div > .status__thread.status__thread--last-item.status__thread--first-item .status.status-reply .status__avatar::before,
 .layout-single-column .scrollable > div > .status__thread ~ .status__thread .status.status-reply .status__avatar::before,
-.layout-single-column .scrollable > div > .status__thread .status.status-reply .status__avatar::before {
+.layout-single-column .scrollable > div > .status__thread .status.status-reply .status__avatar::before,
+.layout-single-column .scrollable > div > .status__thread.status__thread--first-item + .status__thread.status__thread--last-item .status.status-reply .status__avatar::before {
   background-color: var(--color-thread-line);
   content: '';
   height: 100%;
